# odometry_optimization

./: CMakeLists.txt  README.md  manifest.xml  package.xml  setup.py
etc/: params-fovis-template.yaml  params-viso2-template.yaml  params.yaml
output/plots/: plot.html
scripts/: odometry_optimization.py  optimization_brute_force.py  post_processing.py  utils.py
scripts/odometry_optimization/: optimization_fminbounds.py
